集成web首页index.jsp，读取数据库展现到前端，包括目录树和表格形式

--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -11,6 +11,8 @@ h1 {margin-bottom:0;}
 h2 {margin-bottom:0;}
 ul {margin:0;}
 li {list-style:none;}
+table{border-collapse:collapse;}
+table,th,td{border: 1px solid black;}
 
 #WDtoolBar{ width:100%; height:20px; background-color:#cf9;padding:2px 0px 10px 5px;}
 #WDtoolBar li{float:left;margin:5px;}
