--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -7,12 +7,12 @@ div#navbar{ height:30px; background:#693;margin-bottom: 5px;}
 div#menu{float:left; width:200px; height:500px; background:#cf9;margin-bottom: 5px;}
 div#content{margin-left:205px;height:500px; background:#ffa;}
 div#footer{height:30px; background:#9c6;text-align: center;clear:both;}
+ul#WDtoolBar{ width:100%; height:20px; background-color:#cf9;padding:2px 0px 10px 5px;}
+ul#WDtoolBar li{float:left;margin:5px;}
 h1 {margin-bottom:0;}
 h2 {margin-bottom:0;}
 ul {margin:0;}
 li {list-style:none;}
+
 table{border-collapse:collapse;}
 table,th,td{border: 1px solid black;}
-
-#WDtoolBar{ width:100%; height:20px; background-color:#cf9;padding:2px 0px 10px 5px;}
-#WDtoolBar li{float:left;margin:5px;}
